@@ -38,6 +38,10 @@
 # include <unistd.h>
 #endif
 
+#ifdef NEED_LIBPORT
+# include "libport.h"
+#endif
+
 #include "tiffio.h"
 
 #define	streq(a,b)	(strcasecmp(a,b) == 0)
@@ -386,14 +390,14 @@ TIFFReadRawData(TIFF* tif, int bitrev)
 
 	TIFFGetField(tif, TIFFTAG_STRIPBYTECOUNTS, &stripbc);
 	if (nstrips > 0) {
-		uint32 bufsize = stripbc[0];
+		uint32 bufsize = (uint32) stripbc[0];
 		tdata_t buf = _TIFFmalloc(bufsize);
 		tstrip_t s;
 
 		for (s = 0; s < nstrips; s++) {
 			if (stripbc[s] > bufsize) {
-				buf = _TIFFrealloc(buf, stripbc[s]);
-				bufsize = stripbc[s];
+				buf = _TIFFrealloc(buf, (tmsize_t)stripbc[s]);
+				bufsize = (uint32) stripbc[s];
 			}
 			if (buf == NULL) {
 				fprintf(stderr,
@@ -401,23 +405,23 @@ TIFFReadRawData(TIFF* tif, int bitrev)
 				    (unsigned long) s);
 				break;
 			}
-			if (TIFFReadRawStrip(tif, s, buf, stripbc[s]) < 0) {
+			if (TIFFReadRawStrip(tif, s, buf, (tmsize_t) stripbc[s]) < 0) {
 				fprintf(stderr, "Error reading strip %lu\n",
 				    (unsigned long) s);
 				if (stoponerr)
 					break;
 			} else if (showdata) {
 				if (bitrev) {
-					TIFFReverseBits(buf, stripbc[s]);
+					TIFFReverseBits(buf, (tmsize_t)stripbc[s]);
 					printf("%s %lu: (bit reversed)\n ",
 					    what, (unsigned long) s);
 				} else
 					printf("%s %lu:\n ", what,
 					    (unsigned long) s);
 				if (showwords)
-					ShowRawWords((uint16*) buf, stripbc[s]>>1);
+					ShowRawWords((uint16*) buf, (uint32) stripbc[s]>>1);
 				else
-					ShowRawBytes((unsigned char*) buf, stripbc[s]);
+					ShowRawBytes((unsigned char*) buf, (uint32) stripbc[s]);
 			}
 		}
 		if (buf != NULL)
